--- a/app.json
+++ b/app.json
@@ -3,7 +3,8 @@
     "pages/shop/shop",
     "pages/my/my",
     "pages/every/every",
-    "pages/cart/cart"
+    "pages/cart/cart",
+    "pages/order/order"
   ],
   "window": {
     "backgroundTextStyle": "light",
