--- a/app.json
+++ b/app.json
@@ -4,7 +4,8 @@
     "pages/my/my",
     "pages/every/every",
     "pages/cart/cart",
-    "pages/order/order"
+    "pages/order/order",
+    "pages/success/success"
   ],
   "window": {
     "backgroundTextStyle": "light",
